Add search button.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,4 +15,8 @@
       <span>Sign in with Google</span>
     </button>
   </ng-template>
+  <button mat-raised-button type="button" [href]="search">
+    <mat-icon>search</mat-icon>
+    <span>Search for Books</span>
+  </button>
 </div>
